package com.thecommitcrew.domain.enums;

public enum AccountStatus {
    ACTIVE,
    SUSPENDED,
    CLOSED
}

