classDiagram
    %% Enums
    class AccountStatus {
        ACTIVE
        SUSPENDED
        CLOSED
    }
    
    class OrderStatus {
        NEW
        FILLED
        REJECTED
        CANCELLED
    }
    
    class OrderSide {
        BUY
        SELL
        apply(current: long, orderQty: long): long
    }
    
    %% Value Objects
    class Money {
        -amount: BigDecimal
        -currency: String
        +add(Money): Money
        +subtract(Money): Money
        +isPositive(): boolean
    }
    
    %% Models
    class Account {
        -accountId: Long
        -holderName: String
        -cashBalance: Money
        -status: AccountStatus
        -version: Long
        -lastUpdated: LocalDateTime
        -statusValidator: AccountStatusValidator
        +debit(Money): Account
        +credit(Money): Account
        +updateStatus(AccountStatus): Account
        +isActive(): boolean
    }
    
    class Instrument {
        -id: String
        -symbol: String
        -name: String
        -assetClass: String
        -currency: String
        -tradable: boolean
        +isTradable(): Boolean
    }
    
    class Order {
        -id: UUID
        -accountId: Long
        -symbol: String
        -side: OrderSide
        -quantity: long
        -price: BigDecimal
        -status: OrderStatus
        -createdOn: LocalDateTime
        -idempotencyKey: String
        +setStatus(OrderStatus): void
    }
    
    class Position {
        -accountId: Long
        -symbol: String
        -quantity: long
        -averageCost: BigDecimal
    }
    
    %% Interfaces
    class AccountStatusValidator {
        <<interface>>
        +validateCanDebit(AccountStatus): void
        +validateCanCredit(AccountStatus): void
    }
    
    %% Relationships
    Account --> Money : has
    Account --> AccountStatus : has
    Account --> AccountStatusValidator : uses
    Account "1" --> "many" Order : places
    Account "1" --> "many" Position : has
    Order --> OrderSide : has
    Order --> OrderStatus : has
    Order --> Position : affects
    Order --> Instrument : trades
    Position --> Instrument : holds